<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_mission"
        android:icon="@drawable/mission"

        android:title="@string/title_mission" />

    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/diary"
        android:title="@string/title_diary" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/report"
        android:title="@string/title_report" />


    <item
        android:id="@+id/navigation_my_page"
        android:icon="@drawable/user"
        android:title="@string/title_my_page" />

</menu>