<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_mission"
        android:name="jin.contest.ta_android.ui.mission.MissionFragment"
        android:label="@string/title_mission"
        tools:layout="@layout/fragment_mission" />

    <fragment
        android:id="@+id/navigation_diary"
        android:name="jin.contest.ta_android.ui.myDiary.MyDiaryFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_my_diary" />


    <fragment
        android:id="@+id/navigation_home"
        android:name="jin.contest.ta_android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_my_page" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="jin.contest.ta_android.ui.report.ReportFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="jin.contest.ta_android.ui.mypage.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page" />
</navigation>